[package]
name = "xt-term"
version = "0.1.0"
description = "A terminal frontend for Xt"
license = "GPL-3.0"
homepage = "https://github.com/xt-editor/xt-term"
repository = "https://github.com/xt-editor/xt-term.git"
keywords = ["editor", "framework", "text"]
readme = "README.md"
authors = ["Dom Rodriguez <shymega@shymega.org.uk>"]

[lib]
name = "xt_term"
path = "src/lib.rs"

[[bin]]
name = "xtt"
path = "src/bin/xt-term.rs"

[dependencies]
log = "0.4.14"
time = "0.2.26"
docopt = "1.1.1"
rustbox = "0.11.0"

[dependencies.clippy]
version = "0.0.302"
optional = true

[dependencies.uuid]
version = "0.8.2"
features = ["v4"]

[dependencies.clap]
version = "2.33.3"
features = ["suggestions", "color", "wrap_help"]

[profile.release]
lto = true

