[package]
name = "xt-frontend-term"
version = "0.1.0"
description = "A terminal frontend for Xt"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/xt-editor/xt-term"
repository = "https://github.com/xt-editor/xt-term.git"
keywords = ["editor", "framework", "text"]
readme = "README.md"
authors = ["Dom Rodriguez <shymega@shymega.org.uk>"]

[lib]
name = "xt_frontend_term"
path = "src/lib.rs"

[[bin]]
name = "xtt"
path = "src/bin/xt-term.rs"

[dependencies]
log = "0.4.17"
time = "0.3.20"
docopt = "1.1.1"
rustbox = "0.11.0"

[dependencies.clippy]
version = "0.0.302"
optional = true

[dependencies.uuid]
version = "1.3.2"
features = ["v4"]

[dependencies.clap]
version = "4.2.5"
features = ["suggestions", "color", "wrap_help"]

[profile.release]
lto = true

