[package]
name = "xt-frontend-term"
version = "0.1.0"
description = "A terminal frontend for Xt"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/Xt-Editor/Xt-Term"
repository = "https://github.com/Xt-Editor/Xt-Term.git"
keywords = ["editor", "framework", "text"]
readme = "README.md"
authors = ["Dom Rodriguez <shymega@shymega.org.uk>"]

[lib]
name = "xt_frontend_term"
path = "src/lib.rs"

[[bin]]
name = "xtt"
path = "src/bin/xt-term.rs"

[dependencies]
log = "0.4.19"
time = "0.3.24"
docopt = "1.1.1"
tui = "0.19.0"

[dependencies.uuid]
version = "1.4.1"
features = ["v4"]

[dependencies.clap]
version = "4.3.19"
features = ["suggestions", "color", "wrap_help"]

[profile.release]
lto = true

